# flasky-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/flask_cli/cli/: main.py
src/flask_cli/common/: __init__.py  cookiemod.py  prompts.py
src/flask_cli/create/: cli.py  domain.py
src/flask_cli/templates/: cli.py  domain.py  exception.py  templates.py
src/flask_cli/templates/data/: default.py
tests/: conftest.py  test_templates.py
