[project]
name = "flasky-cli"
version = "0.1.9"
description = " CLI to start Flask projects"
authors = [
    { name = "jennier0107", email = "mt3085570450@outlook.com" }
]
dependencies = [
    "click>=8.1.7",
    "rich-click>=1.7.4",
    "cookiecutter>=2.6.0",
    "questionary>=2.0.1",
    "pathvalidate>=3.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/jennier0107/flasky-cli"
Repository = "https://github.com/jennier0107/flasky-cli"
"Bug Tracker" = "https://github.com/jennier0107/flasky-cli/issues"

[project.scripts]
flask-cli = "flask_cli.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flask_cli"]

[tool.hatch.build.targets.sdist]
exclude = ["tests", "static"]
